--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - assets/img/coco1.jpg
+    - assets/img/coco2.jpg
+    - assets/img/coco3.jpg
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
